--- a/Easy-Chat-Utils-API/Easy-Chat-Utils-API.vcxproj.filters
+++ b/Easy-Chat-Utils-API/Easy-Chat-Utils-API.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Crypto_Manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Crypto_Manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
